fix: fixed overflow avatar

--- a/css/main.css
+++ b/css/main.css
@@ -257,6 +257,7 @@ body {
   width: 100%;
   background-image: url(../../img/pictures/bg-avatar-desk.png);
   background-repeat: no-repeat;
+  overflow: hidden;
 }
 @media (max-width: 660px) {
   .avatar {
